@@ -6,6 +6,11 @@
 
 (unreleased):
 
+    - `port info` now opens the Portfile and displays up-to-date information.
+      This allows information about variants to be displayed (eg. dependencies).
+      Also allow `port info` to default to current directory if no name is provided
+      (eridius r25255).
+    
     - Add -E flag to reinplace, does the same thing as in sed (eridius r25251).
 
     - Add support for [nosync] flag in sources.conf to prevent a source from syncing
